# Clean-Architecture

./: RiskValuation.Application.sln  other_branch.txt
AspNetCore.Courses.Section18/: AspNetCore.Courses.Section15.sln
AspNetCore.Courses.Section18/AspNetCore.Courses.Section15/: AspNetCore.Courses.Section15.csproj  Program.cs  XunitDefault.cs
AspNetCore.Courses.Section18/AspNetCore.Courses.Section15.Infrastructures/: AspNetCore.Courses.Section15.Infrastructures.csproj
AspNetCore.Courses.Section18/AspNetCore.Courses.Section5.BusinessLogic/: AspNetCore.Courses.Section15.BusinessLogic.csproj
AspNetCore.Courses.Section18/AspNetCore.Courses.XUnits/: AspNetCore.Courses.Section15.XUnits.csproj
AspNetCore.Courses.Section18/AspnetCore.Courses.Section15.Repositories/: ICountryRepository.cs  IPersonRepository.cs
AspNetCore.Courses.Section18/DataBase/: CountryDataBase.json  PersonDataBase.json
Sofidy.Unicia.Api/: .gitignore  Sofidy.Unicia.Api.sln
Sofidy.Unicia.Api/Sofidy.Unicia.Api/: Dockerfile  Program.cs  Readme.txt  Sofidy.Unicia.Api.csproj  appsettings.api.json  appsettings.json  appsettings.serilog.json
Sofidy.Unicia.Api/Sofidy.Unicia.Application/: Readme.txt  ServiceExtensions.cs  Sofidy.Unicia.Application.csproj
Sofidy.Unicia.Api/Sofidy.Unicia.Domain/: Readme.txt  Sofidy.Unicia.Domain.csproj
Sofidy.Unicia.Api/Sofidy.Unicia.Test/: BaseTest.cs  (+2 more)
projectExample/: CMakeLists.txt
projectExample/include/: CMakeLists.txt  projectExample.h
projectExample/projectExample/: CMakeLists.txt  projectExample.cpp
projectExample/src/: CMakeLists.txt  Compute.cpp
(+189 files in other folders)
